CAROUSEL content update and readme file

--- a/index.html
+++ b/index.html
@@ -135,8 +135,11 @@
                     class="d-block w-100" alt="...">
                 <div class="carousel-caption text-center">
                     <h1>COMMODITIES AND FOOD PRODUCTS</h1>
-                    <p class="text-center">When it comes to petroleum and biofuel, we've got you covered. Our products
-                        are shipped worldwide, and you can trust that the quality is always up to standard.</p>
+                    <p class="text-center">
+                        Are you looking for top-quality agriculture commodities and food products?
+                        Look no further! We ship our products all over the world, and our quality meets all the
+                        necessary requirements.
+                    </p>
                 </div>
             </div>
             <div class="carousel-item carousel-item-custom-height">
@@ -144,8 +147,10 @@
                     class="d-block w-100" alt="...">
                 <div class="carousel-caption text-center">
                     <h1>CHEMICALS AND CATTLE FIELD FERTILIZER</h1>
-                    <p class="text-center">When it comes to petroleum and biofuel, we've got you covered. Our products
-                        are shipped worldwide, and you can trust that the quality is always up to standard.</p>
+                    <p class="text-center">
+                        In need of chemicals or cattle field fertilizer? Your're in the right place. We deliver these
+                        products world wide, and our quality consistently meets industry standards.
+                    </p>
                 </div>
             </div>
 
@@ -154,9 +159,10 @@
                     class="d-block w-100" alt="...">
                 <div class="carousel-caption text-center">
                     <h1>PETROLEUM AND BIO FUEL</h1>
-                    <p class="text-center">Are you looking for top-quality agriculture commodities and food products?
-                        Look no further! We
-                        ship our products all over the world, and our quality meets all the necessary requirements.</p>
+                    <p class="text-center">
+                        When it comes to petroleum and biofuel, we've got you covered. Our products are shipped
+                        worldwide, and you can trust that the quality is always up to standards.
+                    </p>
                 </div>
             </div>
         </div>
