about page's first carousel content update

--- a/about.html
+++ b/about.html
@@ -205,10 +205,12 @@
                 <img src="assets/images/about-page/hero-section-img/about-hero-img-1.webp" class="d-block w-100"
                     alt="...">
                 <div class="carousel-caption text-center">
-                    <h1>GLOBAL ACCESSIBILITY</h1>
-                    <p>We pride ourselves on our extensive reach across continents, establishing robust partnerships
-                        with suppliers and buyers worldwide. This enables us to source the finest commodities and raw
-                        food products, ensuring quality and reliability in every transaction.</p>
+                    <h1>Welcome to Bhagirath Industry</h1>
+                    <p>
+                        we are committed to innovation and excellence. With state-of-the-art facilities and a dedicated
+                        team of professionals, we deliver top-quality solutions tailored to meet the needs of various
+                        industries. Discover how our expertise can support your goals.
+                    </p>
                 </div>
             </div>
             <div class="carousel-item carousel-item-custom-height">
