career page's content updated

--- a/career.html
+++ b/career.html
@@ -130,15 +130,18 @@
   <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel" data-bs-pause="false">
     <div class="carousel-inner">
       <div class="carousel-item carousel-item-custom-height active">
-        <img src="assets/images/career page/hero-section-img/career-hero-img-2.webp" class="d-block w-100" alt="...">
+        <img src="assets/images/career page/hero-section-img/career-hero-img-1.webp" class="d-block w-100" alt="...">
         <div class="carousel-caption text-center">
-          <h1>CHEMICALS AND CATTLE FIELD FERTILIZER</h1>
-          <p>When it comes to petroleum and biofuel, we've got you covered. Our products are shipped worldwide, and
-            you can trust that the quality is always up to standard.</p>
+          <h1>Join Our Team and Shape the Future</h1>
+          <p>
+            At bhagirath indusrty, we believe in empowering talent to make an impact. Join a community of innovators,
+            creators, and leaders who are driven to achieve excellence together. Explore opportunities to grow your
+            skills, contribute meaningfully, and be part of something transformative. Your career starts here.
+          </p>
         </div>
       </div>
       <div class="carousel-item carousel-item-custom-height">
-        <img src="assets/images/career page/hero-section-img/career-hero-img-3.webp" class="d-block w-100" alt="...">
+        <img src="assets/images/career page/hero-section-img/career-hero-img-2.webp" class="d-block w-100" alt="...">
         <div class="carousel-caption text-center">
           <h1>COMMODITIES AND FOOD PRODUCTS</h1>
           <p>When it comes to petroleum and biofuel, we've got you covered. Our products are shipped worldwide, and
@@ -200,29 +203,35 @@
 
   <section class="job-openings px-2 pb-5">
     <h2 class="text-center">Job Openings</h2>
-    <p class="text-center regular-font">Lorem ipsum dolor, sit amet consectetur adipisicing elit</p>
+    <p class="text-center regular-font">
+      We're on the lookout for talented individuals to join our team! If you're passionate about innovation, growth, and
+      making a meaningful impact, we want to hear from you. Explore our current job openings and find your next career
+      opportunity.
+    </p>
     <div class="container pt-4">
       <div class="row">
         <!-- <div class="col-md-4 mb-4 job-card"> -->
         <div class="col-md-4 mb-4 job-card regular-font" data-title="Back-end Developer" data-location="Bhopal"
           data-category="Developer">
           <div class="card-career border-secondary">
-            <div class="card-header bg-transparent border-success">Node.js Developer</div>
+            <div class="card-header bg-transparent border-success">Telecommunications</div>
             <hr class="card-line">
             <div class="card-body dark-blue-text">
               <p><strong>Requirement Experience:</strong> 1 to 3 years</p>
               <p><strong>Location:</strong> Bhopal</p>
               <p class="content-visible"><strong>Description:</strong></p>
-              <p id="content-hidden-1" class="content-hidden">Donec quis vitae condimentum fringilla eleifend eu cras
-                et amet. Eu non mi accumsan lacus enim. Nullam nam odio gravida nulla turpis tempor sit tristique.
-                Eget luctus neque sapien accumsan dui ac mauris lobortis elit. Lorem ipsum dolor sit amet consectetur.
-                Donec quis vitae condimentum fringilla eleifend eu cras et amet. Eu non mi accumsan lacus enim.</p>
+              <p id="content-hidden-1" class="content-hidden">
+                We are seeking an experienced and motivated Telecommunications Specialist to join our team. In this
+                role, you’ll design, implement, and maintain our telecommunications systems to ensure seamless
+                connectivity and communication. Working closely with IT and network teams, you will troubleshoot issues,
+                upgrade infrastructure, and support telecom project.
+              </p>
               <span class="read-more-btn" onclick="toggleContent('content-hidden-1')">Read more</span>
             </div>
           </div>
         </div>
         <!-- <div class="col-md-4 mb-4 job-card"> -->
-        <div class="col-md-4 mb-4 job-card regular-font" data-title="Front-end Developer" data-location="Noida"
+        <!-- <div class="col-md-4 mb-4 job-card regular-font" data-title="Front-end Developer" data-location="Noida"
           data-category="Developer">
           <div class="card-career border-secondary">
             <div class="card-header bg-transparent border-success">React Developer</div>
@@ -238,9 +247,9 @@
               <span class="read-more-btn" onclick="toggleContent('content-hidden-2')">Read more</span>
             </div>
           </div>
-        </div>
+        </div> -->
         <!-- <div class="col-md-4 mb-4 job-card"> -->
-        <div class="col-md-4 mb-4 job-card regular-font" data-title="Content Writer" data-location="Bhopal"
+        <!-- <div class="col-md-4 mb-4 job-card regular-font" data-title="Content Writer" data-location="Bhopal"
           data-category="Writer">
           <div class="card-career border-secondary">
             <div class="card-header bg-transparent border-success">Content Writer</div>
@@ -256,8 +265,8 @@
               <span class="read-more-btn" onclick="toggleContent('content-hidden-3')">Read more</span>
             </div>
           </div>
-        </div>
-        <div class="col-md-4 mb-4 job-card regular-font" data-title="Content Writer" data-location="Noida"
+        </div> -->
+        <!-- <div class="col-md-4 mb-4 job-card regular-font" data-title="Content Writer" data-location="Noida"
           data-category="Writer">
           <div class="card-career border-secondary">
             <div class="card-header bg-transparent border-success">Junior Content Writer</div>
@@ -273,8 +282,8 @@
               <span class="read-more-btn" onclick="toggleContent('content-hidden-3')">Read more</span>
             </div>
           </div>
-        </div>
-        <div class="col-md-4 mb-4 job-card regular-font" data-title="Back-end Developer" data-location="Noida"
+        </div> -->
+        <!-- <div class="col-md-4 mb-4 job-card regular-font" data-title="Back-end Developer" data-location="Noida"
           data-category="Developer">
           <div class="card-career border-secondary">
             <div class="card-header bg-transparent border-success">Java Developer</div>
@@ -290,7 +299,8 @@
               <span class="read-more-btn" onclick="toggleContent('content-hidden-1')">Read more</span>
             </div>
           </div>
-        </div>
+        </div> -->
+
       </div>
       <!-- "No jobs found" message -->
       <p id="no-jobs-message" class="text-center" style="display: none;">Sorry, no jobs found matching your criteria.
@@ -304,7 +314,11 @@
     <div class="container">
       <div class="quick-top-content text-start pt-5">
         <h2>Quick Apply</h2>
-        <p class="regular-font">Lorem ipsum dolor sit amet consectetur. Placerat ac eu at tincidunt at.</p>
+        <p class="regular-font">
+          Ready to take the next step? Our Quick Apply option makes it easy to submit your application in minutes.
+          Simply fill out the essentials, and our team will review your profile. Join us on your career journey—your new
+          opportunity is just a few clicks away!
+        </p>
       </div>
       <form id="jobApplicationForm" enctype="multipart/form-data">
         <div class="row pt-5">
