in about page client success story's content updated

--- a/about.html
+++ b/about.html
@@ -789,12 +789,14 @@
                                 <div class="container">
                                     <div class="row align-items-center">
                                         <div class="client-success-stories-text">
-                                            <h2 class="pt-5 px-md-5">John Doe</h2>
-                                            <p class="c-s-p-text px-md-5">HR & manager</p>
-                                            <p class="regular-font px-md-5">Bhagirath Industries exceeds
-                                                expectations in trading goods.
-                                                Their professionalism and dedication ensure seamless transactions and
-                                                superior product quality.
+                                            <h2 class="pt-5 px-md-5">Nikhil Desai</h2>
+                                            <p class="c-s-p-text px-md-5">Operations Manager</p>
+                                            <p class="regular-font px-md-5">
+                                                Working with Bhagirath industry has transformed our supply chain
+                                                management. Their team consistently provides innovative solutions that
+                                                simplify our processes and improve efficiency. Their dedication and
+                                                expertise allow us to stay ahead of the curve and meet our clients'
+                                                needs seamlessly.
                                             </p>
                                         </div>
                                     </div>
@@ -804,12 +806,13 @@
                                 <div class="container">
                                     <div class="row align-items-center">
                                         <div class="client-success-stories-text">
-                                            <h2 class="pt-5 px-md-5">Donald Hill</h2>
-                                            <p class="c-s-p-text px-md-5">HR & manager</p>
-                                            <p class="regular-font px-md-5">Bhagirath Industries exceeds
-                                                expectations in trading goods.
-                                                Their professionalism and dedication ensure seamless transactions and
-                                                superior product quality.
+                                            <h2 class="pt-5 px-md-5">Anita Mehra</h2>
+                                            <p class="c-s-p-text px-md-5">Procurement Head</p>
+                                            <p class="regular-font px-md-5">
+                                                Bhagirath industry has been an invaluable partner for our business. They
+                                                go above and beyond to meet our unique requirements and always deliver
+                                                on time. Their commitment to quality and their proactive approach have
+                                                helped us achieve remarkable results and grow our business.
                                             </p>
                                         </div>
                                     </div>
@@ -922,7 +925,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="accordion-item faq-tab">
+                        <!-- <div class="accordion-item faq-tab">
                             <h2 class="accordion-header">
                                 <button class="accordion-button collapsed regular-font" type="button"
                                     data-bs-toggle="collapse" data-bs-target="#collapseSix" aria-expanded="false"
@@ -938,7 +941,7 @@
                                     At eaque aliquid repellat commodi ullam eos numquam quo velit non dolorem.
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
                 <div class="faq-img pt-3">
@@ -1104,7 +1107,7 @@
         const images = [
             'assets/images/our-services-icon-img/client-success-stories/client-img-1.webp',
             'assets/images/our-services-icon-img/client-success-stories/client-img-2.webp',
-            'assets/images/our-services-icon-img/client-success-stories/client-img-3.webp'
+            'assets/images/our-services-icon-img/client-success-stories/client-img-1.webp'
         ];
         const carouselElement = document.getElementById('testimonialCarousel');
         const imgElement = document.querySelector('.new-client-img');
