our services page's content updated

--- a/our-services.html
+++ b/our-services.html
@@ -133,10 +133,14 @@
         <img src="assets/images/our-services-icon-img/hero-services-section-img/Rectangle 29 (2).webp"
           class="d-block w-100" alt="...">
         <div class="carousel-caption text-center">
-          <h1>CHEMICALS AND CATTLE FIELD FERTILIZER</h1>
-          <p class="text-center">When it comes to petroleum and biofuel, we've got you covered. Our products are shipped
-            worldwide, and you
-            can trust that the quality is always up to standard.</p>
+          <h1>Comprehensive Logistics Solutions for Your Business Needs</h1>
+          <p class="text-center">
+            At Bhagirath Industry, we offer a full range of logistics services designed to streamline your supply chain
+            and enhance operational efficiency. With a focus on quality assurance and product safety, we ensure that
+            every aspect of your transportation and storage requirements is met with the highest standards of care and
+            professionalism. From efficient cargo handling to secure storage solutions, we’re dedicated to delivering on
+            time, every time.
+          </p>
         </div>
       </div>
       <div class="carousel-item carousel-item-custom-height">
@@ -292,7 +296,8 @@
   <!-- OUR SERVICES NEW CARDS -->
   <section class="container text-center my-5 job-card">
     <h2 class="new-our-services-cards-heading">Our Services</h2>
-    <p class="new-our-services-cards-text text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex, eos.
+    <p class="new-our-services-cards-text text-center">
+      Discover a range of specialized logistics solutions designed to meet the demands of modern businesses.
     </p>
 
     <div class="row new-our-services-cards-container">
@@ -348,7 +353,7 @@
               <p class="new-our-services-cards-overlay-text pt-2"><span class="regular-font">Trucking</span><br>When it
                 comes to land transportation, our reliable fleet of trucks is at your service. Whether it's
                 short-haul or long-distance, our experienced drivers and well-maintained vehicles ensure the safe and
-                timely delivery of your raw food materials.</p>
+                timely delivery of your raw food materials to their destination.</p>
             </div>
           </div>
         </div>
@@ -360,10 +365,9 @@
             style="background-image: url('assets/images/our-services-icon-img/cards/Rectangle 18 (5).webp');">
             <div class="new-our-services-cards-overlay">
               <p class="new-our-services-cards-overlay-text pt-2"><span class="regular-font">Products
-                  Safety</span><br>We
-                prioritise your safety above all else. Our unwavering commitment to rigorous quality
-                standards ensures that every product we trade is held to the highest safety measures, giving you
-                confidence and peace of mind in every transaction.</p>
+                  Safety</span><br>At Bhagirath Industry, we prioritise your safety above all else. Our unwavering
+                commitment to rigorous quality standards ensures that every product we trade is held to the highest
+                safety measures, giving you confidence and peace of mind in every transaction.</p>
             </div>
           </div>
         </div>
@@ -375,9 +379,9 @@
             style="background-image: url('assets/images/our-services-icon-img/cards/Rectangle 18 (6) (2).webp');">
             <div class="new-our-services-cards-overlay">
               <p class="new-our-services-cards-overlay-text pt-2"><span class="regular-font">Quality
-                  Assurance</span><br>We implement stringent quality control measures throughout the supply chain to
-                uphold the integrity of the products we trade. Our commitment to excellence is reflected in the
-                satisfaction of our clients who trust us for superior supplies.</p>
+                  Assurance</span><br>Quality is paramount. We implement stringent quality control measures throughout
+                the supply chain to uphold the integrity of the products we trade. Our commitment to excellence is
+                reflected in the satisfaction of our clients who trust us for superior commodities and supplies.</p>
             </div>
           </div>
         </div>
@@ -481,7 +485,11 @@
     <div class="container">
       <div class="client-top-text">
         <h2>CLIENT'S SUCCESS STORIES</h2>
-        <p class="regular-font">Lorem ipsum dolor sit amet consectetur. Placerat ac eu at tincidunt at.</p>
+        <p class="regular-font">
+          we take pride in the success of our clients. Our tailored solutions have empowered businesses to achieve their
+          goals, enhance efficiency, and drive growth. Discover how our partnerships have transformed challenges into
+          triumphs, showcasing real-world examples of innovation and success across various industries.
+        </p>
       </div>
 
       <div class="row">
@@ -505,9 +513,10 @@
                     <div class="client-success-stories-text">
                       <h2 class="pt-5 px-md-5">Simran Kaur</h2>
                       <p class="c-s-p-text px-md-5">HR & manager</p>
-                      <p class="regular-font px-md-5">Bhagirath Industries exceeds expectations in trading goods.
+                      <p class="regular-font px-md-5">
+                        Bhagirath Industries exceeds expectations in trading goods.
                         Their professionalism and dedication ensure seamless transactions and superior product quality.
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat, repellat.</p>
+                      </p>
                     </div>
                   </div>
                 </div>
@@ -517,11 +526,14 @@
                 <div class="container">
                   <div class="row align-items-center">
                     <div class="client-success-stories-text">
-                      <h2 class="pt-5 px-md-5">John Doe</h2>
-                      <p class="c-s-p-text px-md-5">HR & manager</p>
-                      <p class="regular-font px-md-5">Bhagirath Industries exceeds expectations in trading goods.
-                        Their professionalism and dedication ensure seamless transactions and superior product quality.
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat, repellat.</p>
+                      <h2 class="pt-5 px-md-5">Nikhil Desai</h2>
+                      <p class="c-s-p-text px-md-5">Operations Manager</p>
+                      <p class="regular-font px-md-5">
+                        Working with Bhagirath industry has transformed our supply chain
+                        management. Their team consistently provides innovative solutions that simplify our processes
+                        and improve efficiency. Their dedication and expertise allow us to stay ahead of the curve and
+                        meet our clients' needs seamlessly.
+                      </p>
                     </div>
                   </div>
                 </div>
@@ -531,11 +543,13 @@
                 <div class="container">
                   <div class="row align-items-center">
                     <div class="client-success-stories-text">
-                      <h2 class="pt-5 px-md-5">Donald Hill</h2>
-                      <p class="c-s-p-text px-md-5">HR & manager</p>
-                      <p class="regular-font px-md-5">Bhagirath Industries exceeds expectations in trading goods.
-                        Their professionalism and dedication ensure seamless transactions and superior product quality.
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat, repellat.</p>
+                      <h2 class="pt-5 px-md-5">Anita Mehra</h2>
+                      <p class="c-s-p-text px-md-5">Procurement Head</p>
+                      <p class="regular-font px-md-5">
+                        Bhagirath industry has been an invaluable partner for our business. They go above and beyond to
+                        meet our unique requirements and always deliver on time. Their commitment to quality and their
+                        proactive approach have helped us achieve remarkable results and grow our business.
+                      </p>
                     </div>
                   </div>
                 </div>
@@ -569,7 +583,10 @@
     <div class="container">
       <div class="text-center pt-5">
         <H2>FREQUENTLY ASKED QUESTIONS</H2>
-        <P class="text-center regular-font">Lorem ipsum dolor sit amet consectetur. Placerat ac eu at tincidunt at.</P>
+        <P class="text-center regular-font">
+          Have questions? We’ve got answers! Here, you’ll find responses to the most common inquiries about our
+          services, policies, and processes.
+        </P>
       </div>
       <div class="faq-con-img d-flex">
         <div class="container h-75 w-md-75 text-light">
@@ -578,13 +595,12 @@
               <h2 class="accordion-header">
                 <button class="accordion-button collapsed regular-font" type="button" data-bs-toggle="collapse"
                   data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                  What is Bhagirath Industries' role in global trade?
+                  What is Bhagirath industry role in global trade?
                 </button>
               </h2>
               <div id="collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                 <div class="accordion-body regular-font">
-                  <strong>Lorem ipsum dolor sit amet. </strong>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  At eaque aliquid repellat commodi ullam eos numquam quo velit non dolorem.
+                  Indusrty Grand connects the world through commerce, facilitation trade in various crude Products.
                 </div>
               </div>
             </div>
@@ -592,13 +608,12 @@
               <h2 class="accordion-header">
                 <button class="accordion-button collapsed regular-font" type="button" data-bs-toggle="collapse"
                   data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                  What is Bhagirath Industries' role in global trade?
+                  How does Bhagirath industry ensure product quality?
                 </button>
               </h2>
               <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                 <div class="accordion-body regular-font">
-                  <strong>Lorem ipsum dolor sit amet. </strong>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  At eaque aliquid repellat commodi ullam eos numquam quo velit non dolorem.
+                  We maintain strict quality control measures throughout sourcing and supply.
                 </div>
               </div>
             </div>
@@ -606,13 +621,12 @@
               <h2 class="accordion-header">
                 <button class="accordion-button collapsed regular-font" type="button" data-bs-toggle="collapse"
                   data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseTwo">
-                  What is Bhagirath Industries' role in global trade?
+                  What type of crude products does Bhagirath industry trade in ?
                 </button>
               </h2>
               <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                 <div class="accordion-body regular-font">
-                  <strong>Lorem ipsum dolor sit amet. </strong>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  At eaque aliquid repellat commodi ullam eos numquam quo velit non dolorem.
+                  We maintain strict quality control measures throughout sourcing and supply.
                 </div>
               </div>
             </div>
@@ -620,13 +634,12 @@
               <h2 class="accordion-header">
                 <button class="accordion-button collapsed regular-font" type="button" data-bs-toggle="collapse"
                   data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseTwo">
-                  What is Bhagirath Industries' role in global trade?
+                  Is Bhagirath Industry transport service good ?
                 </button>
               </h2>
               <div id="collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                 <div class="accordion-body regular-font">
-                  <strong>Lorem ipsum dolor sit amet. </strong>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  At eaque aliquid repellat commodi ullam eos numquam quo velit non dolorem.
+                  Yes the service the industry provides is highly recommended in the terms of transportation.
                 </div>
               </div>
             </div>
@@ -634,17 +647,16 @@
               <h2 class="accordion-header">
                 <button class="accordion-button collapsed regular-font" type="button" data-bs-toggle="collapse"
                   data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseTwo">
-                  What is Bhagirath Industries' role in global trade?
+                  What is Bhagirath industry vision for the future of global trades?
                 </button>
               </h2>
               <div id="collapseFive" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                 <div class="accordion-body regular-font">
-                  <strong>Lorem ipsum dolor sit amet. </strong>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  At eaque aliquid repellat commodi ullam eos numquam quo velit non dolorem.
+                  We envision a future where products are delivered worldwide, shaping it through trade.
                 </div>
               </div>
             </div>
-            <div class="accordion-item faq-tab">
+            <!-- <div class="accordion-item faq-tab">
               <h2 class="accordion-header">
                 <button class="accordion-button collapsed regular-font" type="button" data-bs-toggle="collapse"
                   data-bs-target="#collapseSix" aria-expanded="false" aria-controls="collapseTwo">
@@ -657,7 +669,8 @@
                   At eaque aliquid repellat commodi ullam eos numquam quo velit non dolorem.
                 </div>
               </div>
-            </div>
+            </div> -->
+
           </div>
         </div>
         <div class="faq-img pt-3">
@@ -701,7 +714,8 @@
         <!-- frame 39 -->
         <div class="col-md-3 mb-4 text-light pt-3 pt-md-5 pe-lg-5">
           <h3>Contact Us</h3>
-          <p class="pt-3">Address - Bhagirath Industries Private Limited - 309, Luxuria Business Hub, Near VR Mall, Udhana Magdalla Road, Surat - Dumas Road, Surat Gujarat - 395007</p>
+          <p class="pt-3">Address - Bhagirath Industries Private Limited - 309, Luxuria Business Hub, Near VR Mall,
+            Udhana Magdalla Road, Surat - Dumas Road, Surat Gujarat - 395007</p>
         </div>
         <!-- frame 38 -->
         <div class="col-md-3 mb-4 text-light pt-3 pt-md-5">
@@ -767,7 +781,7 @@
     const images = [
       'assets/images/our-services-icon-img/client-success-stories/client-img-1.webp',
       'assets/images/our-services-icon-img/client-success-stories/client-img-2.webp',
-      'assets/images/our-services-icon-img/client-success-stories/client-img-3.webp'
+      'assets/images/our-services-icon-img/client-success-stories/client-img-1.webp'
     ];
     const carouselElement = document.getElementById('testimonialCarousel');
     const imgElement = document.querySelector('.new-client-img');
