contact-us page content updated

--- a/contact-us.html
+++ b/contact-us.html
@@ -133,9 +133,12 @@
       <div class="carousel-item carousel-item-custom-height active">
         <img src="assets/images/contact-us-img/hero-section/contact-us-hero-img-1.webp" class="d-block w-100" alt="...">
         <div class="carousel-caption text-center">
-          <h1>CHEMICALS AND CATTLE FIELD FERTILIZER</h1>
-          <p class="">When it comes to petroleum and biofuel, we've got you covered. Our products are shipped worldwide,
-            and you can trust that the quality is always up to standard.</p>
+          <h1>Get in Touch with Us</h1>
+          <p class="">
+            We're here to help! Whether you have a question, need assistance, or want to discuss how we can work
+            together, our team is ready to connect with you. Reach out to us, and we'll get back to you as soon as
+            possible. Let’s make something amazing happen!
+          </p>
         </div>
       </div>
       <div class="carousel-item carousel-item-custom-height">
@@ -217,10 +220,12 @@
   <section class="query">
     <div class="container">
       <div class="query-top-content pt-5">
-        <h2>
-          Submit a Query
-        </h2>
-        <p class="regular-font">Lorem ipsum dolor sit amet consectetur. Placerat ac eu at tincidunt at. </p>
+        <h2>Query</h2>
+        <p class="regular-font">
+          We’re here to help! Whether you have a question, need assistance, or just want to learn more about our
+          services, we’d love to hear from you. Fill out the form below, and our team will get back to you as soon as
+          possible. Let’s connect and find the best solution for your needs!
+        </p>
       </div>
 
       <form id="contactForm">
@@ -296,7 +301,8 @@
         <!-- frame 39 -->
         <div class="col-md-3 mb-4 text-light pt-3 pt-md-5 pe-lg-5">
           <h3>Contact Us</h3>
-          <p class="pt-3">Address - Bhagirath Industries Private Limited - 309, Luxuria Business Hub, Near VR Mall, Udhana Magdalla Road, Surat - Dumas Road, Surat Gujarat - 395007</p>
+          <p class="pt-3">Address - Bhagirath Industries Private Limited - 309, Luxuria Business Hub, Near VR Mall,
+            Udhana Magdalla Road, Surat - Dumas Road, Surat Gujarat - 395007</p>
         </div>
         <!-- frame 38 -->
         <div class="col-md-3 mb-4 text-light pt-3 pt-md-5">
