client success story's description change

--- a/about.html
+++ b/about.html
@@ -752,10 +752,9 @@
             <div class="client-top-text">
                 <h2>CLIENT'S SUCCESS STORIES</h2>
                 <p class="regular-font">
-                    we take pride in the success of our clients. Our tailored solutions have empowered businesses to
-                    achieve their goals, enhance efficiency, and drive growth. Discover how our partnerships have
-                    transformed challenges into triumphs, showcasing real-world examples of innovation and success
-                    across various industries.
+                    Our clients are at the heart of everything we do, and their success is our greatest achievement. We
+                    take pride in partnering with businesses across diverse industries, helping them overcome logistical
+                    challenges and reach their goals.
                 </p>
             </div>
             <div class="row">
